# realtimex-frappe

./: README.md  pyproject.toml
config/: default.json
src/realtimex_frappe/: __init__.py  __main__.py  cli.py
src/realtimex_frappe/commands/: __init__.py  new_site.py  run.py  setup.py
src/realtimex_frappe/config/: __init__.py  env.py  loader.py  schema.py
src/realtimex_frappe/data/: __init__.py  default.json
src/realtimex_frappe/utils/: bench.py  environment.py  paths.py
tests/: test_bench.py  test_config.py
