[project]
name = "realtimex-frappe"
version = "0.4.0"
description = "CLI tool for streamlined Frappe/ERPNext site setup with PostgreSQL and bundled binaries support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Realtimex" }
]
keywords = ["frappe", "erpnext", "bench", "cli", "setup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "frappe-bench>=5.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
realtimex-frappe = "realtimex_frappe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/realtimex_frappe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
